mTLS/app1.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: ibmcom/analyzer:v1.1
        ports:
        - containerPort: 5000
          name: http
---

apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  ports:
  - port: 80
    name: http
    targetPort: 5000
  selector:
    app: app1
